--- a/Models/-VC/2025.07.19_Conan.md
+++ b/Models/-VC/2025.07.19_Conan.md
@@ -468,3 +468,56 @@ Experimental results show that Conan surpasses existing baseline approaches, ach
 \bibliography{custom}   
 
 \end{document}
+
+## References
+
+[^Wang2024Streamvoice]: Streamvoice: Streamable Context-Aware Language Modeling for Real-Time Zero-Shot Voice Conversion. arXiv:2401.11053.
+[^Chen2022Controlvc]: Controlvc: Zero-Shot Voice Conversion With Time-Varying Controls on Pitch and Speed. arXiv:2209.11866.
+[^Yang2024Streamvc]: Streamvc: Real-Time Low-Latency Voice Conversion. ICASSP 2024-2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
+[^Wang2021Vqmivc]: Vqmivc: Vector Quantization and Mutual Information-Based Unsupervised Speech Representation Disentanglement for One-Shot Voice Conversion. arXiv:2106.10132.
+[^Qian2019Autovc]: Autovc: Zero-Shot Voice Style Transfer With Only Autoencoder Loss. International Conference on Machine Learning 2019.
+[^Yang2022Streamable]: Streamable Speech Representation Disentanglement and Multi-Level Prosody Modeling for Live One-Shot Voice Conversion.. Interspeech 2022.
+[^Zhang2025TCSinger]: TCSinger 2: Customizable Multilingual Zero-Shot Singing Voice Synthesis. arXiv:2505.14910.
+[^Zhang2025ISDrama]: ISDrama: Immersive Spatial Drama Generation Through Multimodal Prompting. arXiv:2504.20630.
+[^Van2022Comparison]: A Comparison of Discrete and Soft Speech Units for Improved Voice Conversion. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Chen2022Wavlm]: Wavlm: Large-Scale Self-Supervised Pre-Training for Full Stack Speech Processing. IEEE Journal of Selected Topics in Signal Processing 2022.
+[^Sun2016Phonetic]: Phonetic Posteriorgrams for Many-to-One Voice Conversion Without Parallel Data Training. 2016 IEEE International Conference on Multimedia and Expo (ICME) 2016.
+[^Chen2021Adaspeech]: Adaspeech: Adaptive Text to Speech for Custom Voice. arXiv:2103.00993.
+[^Quamer2024End-to-End]: End-to-End Streaming Model for Low-Latency Speech Anonymization. 2024 IEEE Spoken Language Technology Workshop (SLT) 2024.
+[^Chou2019One-Shot]: One-Shot Voice Conversion by Separating Speaker and Content Representations With Instance Normalization. arXiv:1904.05742.
+[^Wang2023Multi-Level]: Multi-Level Temporal-Channel Speaker Retrieval for Robust Zero-Shot Voice Conversion. Arxiv.
+[^Ebbers2021Contrastive]: Contrastive Predictive Coding Supported Factorized Variational Autoencoder for Unsupervised Learning of Disentangled Speech Representations. ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Choi2021Neural]: Neural Analysis and Synthesis: Reconstructing Speech From Self-Supervised Representations. Advances in Neural Information Processing Systems 2021.
+[^Wang2023Lm-Vc]: Lm-Vc: Zero-Shot Voice Conversion via Speech Generation Based on Language Models. IEEE Signal Processing Letters 2023.
+[^Hayashi2022Investigation]: An Investigation of Streaming Non-Autoregressive Sequence-to-Sequence Voice Conversion. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Ren2020Fastspeech]: Fastspeech 2: Fast and High-Quality End-to-End Text to Speech. arXiv:2006.04558.
+[^Hayashi2021Non-Autoregressive]: Non-Autoregressive Sequence-to-Sequence Voice Conversion. ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Kameoka2021FastS2S-VC]: FastS2S-VC: Streaming Non-Autoregressive Sequence-to-Sequence Voice Conversion. arXiv:2104.06900.
+[^Chen2023Streaming]: Streaming Voice Conversion via Intermediate Bottleneck Features and Non-Streaming Teacher Guidance. ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2023.
+[^Ning2024Dualvc]: Dualvc 2: Dynamic Masked Convolution for Unified Streaming and Non-Streaming Voice Conversion. ICASSP 2024-2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
+[^Wang2023Alo-Vc]: Alo-Vc: Any-to-Any Low-Latency One-Shot Voice Conversion. arXiv:2306.01100.
+[^Baevski2020Wav2vec]: Wav2vec 2.0: A Framework for Self-Supervised Learning of Speech Representations. Advances in Neural Information Processing Systems 2020.
+[^Hsu2021Hubert]: Hubert: Self-Supervised Speech Representation Learning by Masked Prediction of Hidden Units. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2021.
+[^Choi2020Attentron]: Attentron: Few-Shot Text-to-Speech Utilizing Attention-Based Variable-Length Embedding. arXiv:2005.08484.
+[^Kumar2021Normalization]: Normalization Driven Zero-Shot Multi-Speaker Speech Synthesis.. Interspeech 2021.
+[^Za{\i}di2021Daft-Exprt]: Daft-Exprt: Robust Prosody Transfer Across Speakers for Expressive Speech Synthesis. arXiv:2108.02271.
+[^Huang2022Generspeech]: Generspeech: Towards Style Transfer for Generalizable Out-of-Domain Text-to-Speech Synthesis. arXiv:2205.07211.
+[^Lee2021Styler]: Styler: Style Factor Modeling With Rapidity and Robustness via Speech Decomposition for Expressive and Controllable Neural Text to Speech. arXiv:2103.09474.
+[^Jiang2024Mega-TTS]: Mega-TTS 2: Boosting Prompting Mechanisms for Zero-Shot Speech Synthesis. The Twelfth International Conference on Learning Representations 2024.
+[^Ju2024Naturalspeech]: Naturalspeech 3: Zero-Shot Speech Synthesis With Factorized Codec and Diffusion Models. arXiv:2403.03100.
+[^Du2024Cosyvoice]: Cosyvoice: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens. arXiv:2407.05407.
+[^{\L}a{\'n}cucki2021Fastpitch]: Fastpitch: Parallel Text-to-Speech With Pitch Prediction. ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Zhang2024TCSinger]: TCSinger: Zero-Shot Singing Voice Synthesis With Style Transfer and Multi-Level Style Control. Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing 2024.
+[^Zheng2023Online]: Online Clustered Codebook. Proceedings of the IEEE/CVF International Conference on Computer Vision 2023.
+[^Zhang2025Versatile]: Versatile Framework for Song Generation With Prompt-Based Control. arXiv:2504.19062.
+[^Van2017Neural]: Neural Discrete Representation Learning. Advances in Neural Information Processing Systems 2017.
+[^Zhang2024StyleSinger]: StyleSinger: Style Transfer for Out-of-Domain Singing Voice Synthesis. Proceedings of the AAAI Conference on Artificial Intelligence 2024.
+[^Vaswani2017Attention]: Attention Is All You Need. Advances in Neural Information Processing Systems 2017.
+[^Kong2020Hifi-Gan]: Hifi-Gan: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis. Advances in Neural Information Processing Systems 2020.
+[^Odena2016Deconvolution]: Deconvolution and Checkerboard Artifacts. Distill 2016.
+[^Mao2017Least]: Least Squares Generative Adversarial Networks. Proceedings of the IEEE International Conference on Computer Vision 2017.
+[^Zen2019Libritts]: Libritts: A Corpus Derived From Librispeech for Text-to-Speech. arXiv:1904.02882.
+[^Zhang2024Gtsinger]: Gtsinger: A Global Multi-Technique Singing Corpus With Realistic Music Scores for All Singing Tasks. arXiv:2409.13832.
+[^Tang2023Any-to-Any]: Any-to-Any Generation via Composable Diffusion. Advances in Neural Information Processing Systems 2023.
+[^Liu2021Any-to-Many]: Any-to-Many Voice Conversion With Location-Relative Sequence-to-Sequence Modeling. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2021.
+[^Guo2023QuickVC]: QuickVC: Any-to-Many Voice Conversion Using Inverse Short-Time Fourier Transform for Faster Conversion. arXiv:2302.08296.
