--- a/Models/-VC/2025.06.01_PseudoVC.md
+++ b/Models/-VC/2025.06.01_PseudoVC.md
@@ -82,3 +82,23 @@ During training, we replace the input of the speaker encoder from $x(c_i, s_m)$ 
 ![](mismatch.pdf)
 
 <a id="fig:mismatch">Mismatch between training and inference</a>
+
+## 2·Related Work
+
+\label{sec:related}
+
+For the perturbation on the input of content encoder, SPEECHSPLIT2.0 [^Chan2022Speechsplit2.] uses Vocal Tract Length Perturbation (VTLP) [^Jaitly2013Vocal] to modify the timbre by warping the frequency.
+
+NANSY [^Choi2021Neural] introduces a method that perturbs the information of the source utterance through three signal processing techniques.
+
+Additionally, [^Li2023Freevc] utilizes an SR-based data augmentation approach to distort speaker information in the source utterance, thereby assisting the model in learning to extract clean content information.
+
+All these methods aims to modify the timbre of the source waveform, while preserving the linguistic information.
+
+However, despite these efforts, there remains a gap in terms of naturalness and speaker diversity between the perturbed utterances and real utterances.
+
+DDDM-VC [^Choi2024DDDM-Vc] mixes the speaker representation by using a binary selection between the original and shuffled representations in the same batch.
+
+So the speaker of selected representation may be different from the source utterance.
+
+In contrast, our approach for the speaker encoder input involves using other utterances from the same speaker during training. 
