--- a/Models/-VC/2025.06.01_PseudoVC.md
+++ b/Models/-VC/2025.06.01_PseudoVC.md
@@ -265,3 +265,171 @@ L_{total}=L_{rec}+L_{kl}+L_{adv}(D)+L_{adv}(G)+L_{fm}(G)
 \end{gather}
 
 \fi
+
+## 4·Experiment
+
+### Experimental Setup
+
+Our experiments are conducted on VCTK [^Veaux2017CSTR] and LibriTTS [^Zen2019Libritts].
+
+We use VCTK corpus for training.
+
+The split of training validation and testing follows [^Li2023Freevc] exactly.
+
+The test-clean subset of LibriTTS is used for test.
+
+We resample the audio samples from 24 kHz to 16 kHz.
+
+We use the pre-trained WavLM-large encoder to extract 1024-dimensional vectors for every 20ms of 16 kHz audio.
+
+We adopt the pretrained speaker model of [^Liu2021Any-to-Many] as speaker encoder, which is fixed during training. 
+Our model is trained up to 200k steps using 8 NVIDIA V100 GPUs.
+
+The batch size is set to 64, with a maximum segment length of 128 frames.
+
+We set $N$ of Equation [equation:set](#equation:set) to 25,  meaning that 25 pseudo utterances will be generated for each source utterance.
+
+### Baseline models
+
+For the overall performance comparison, we choose three public models, which are: 
+
+\begin{enumerate}
+
+-  **PH** [^Shan2024Phoneme], a one-shot VC model named Phoneme Hallucinator.
+
+It is based on set expansion.
+
+The number of hallucinated features is set to 30000.
+
+-  **DDDM-VC** [^Choi2024DDDM-Vc], a recently proposed diffusion-based generative model.
+
+-  **FreeVC** [^Li2023Freevc], a widely-used voice conversion framework.
+
+It is the exact baseline of our PseudoVC, as the two methods adopt similar model framework and training data. 
+\end{enumerate}
+
+For the ablation study of our proposed *Pseudo Conversion* method, we select three information perturbation methods for comparison.
+
+Each of those methods generates 25 perturbed utterances:
+
+\begin{enumerate}
+
+-  **VTLP** is a signal processing method used by [^Jaitly2013Vocal].
+
+The warping factor is set to $\alpha \sim U(0.9,1.1)$.
+
+We use the implementation \footnote{https://github.com/biggytruck/SpeechSplit2.git}.
+
+-  **NANSY** is proposed in [^Choi2021Neural].
+
+The method has three functions, which are random frequency shaping, pitch randomization and formant shifting.
+
+The hyperparameters of those functions are consistent with those in [^Choi2021Neural].
+
+We refer to the project \footnote{https://github.com/dhchoi99/NANSY.git}.
+
+-  **SR** is used by [^Li2023Freevc].
+
+This conversion is based on vertical spectrogram-resize operation.
+
+As described by [^Li2023Freevc], the resize ratio ranges from 0.85 to 1.15.
+
+The details can be found in the official FreeVC project \footnote{https://github.com/OlaWod/FreeVC.git}.
+
+\end{enumerate}
+
+### Evaluation Metrics
+
+#### Objective metrics
+
+We utilize Amphion [^Zhang2024Amphion] to calculate the word error rate (WER) using the Whisper large-v3 model [^Radford2023Robust].
+
+Additionally, we measure speaker similarity through speaker encoder cosine similarity (SECS) using the Resemblyzer [^Wan2018Generalized] model.
+
+Following [^Li2023Freevc], we randomly select 400 utterances (200 from VCTK, 200 from LibriTTS) as source speech, and we choose 12 speakers as target speakers, which results in 4800 utterances.
+
+#### Subjective metrics
+
+For the subjective metrics, we measure the 5-scale mean opinion score (MOS) and similarity mean opinion score (SMOS) for the speech naturalness and speaker similarity. 1 is the lowest perceived quality and 5 is the highest perceived quality.
+15 participants evaluate the scores of 300 utterances which are randomly selected from the objective test dataset.
+
+### Main results
+
+<a id="tab:main">Subjective evaluation results in terms of 5-scale MOS and SMOS with 95\% confidence intervals.
+
+Objective evaluation results in terms of  WER and SECS.
+
+GT denotes the source speech.</a>
+
+The subjective and objective results in Table [tab:main](#tab:main) show that our proposed PseudoVC model outperforms all the baseline models.
+
+When compared to the exact baseline FreeVC, our proposed model demonstrates superior naturalness and speaker similarity across both subjective and objective metrics.
+
+We attribute these improvements to our two effective training strategies, which aims to reduce the mismatch between training and inference.
+
+In the next section, we will conduct an ablation study to further investigate the effectiveness of the two training strategies.
+
+### Ablation study of Pseudo Conversion
+
+<a id="tab:ablation1">Ablation study of Pseudo Conversion. **Information Perturbation** stands for information perturbation methods. $\mathcal{M}_t$ denotes the VC teacher model which is used by *Pseudo Conversion* to generate pseudo utterances.</a>
+
+#### Comparison with previous work
+
+In Table [tab:ablation1](#tab:ablation1), we compare our proposed *Pseudo Conversion* with other information perturbation methods.
+
+All the models of Table [tab:ablation1](#tab:ablation1) only differ in the input of WavLM.
+**a0** is the baseline model, which feeds source utterances into the WavLM without any perturbation.
+
+Results show that all the information perturbation methods achieve better results than the baseline model **a0**.
+
+Model **b3** using *Pseudo Conversion* achieves the best speaker similarity among those methods.
+
+We argue that both the diversity and naturalness of generated utterances' timbre will affect the final performance.
+
+To explain our method's effectiveness, we use t-SNE [^Maaten2008Visualizing] to visualize speaker embeddings of perturbed utterances in Fig. [fig:tsne](#fig:tsne).
+
+All the perturbed utterances are based on the same source utterance.
+
+The results reveal that the utterances generated by our method exhibit the greatest speaker diversity.
+
+Additionally, we plot the speaker embeddings of real utterances randomly selected from the test set.
+
+The distribution of speaker embeddings from our method closely resembles that of the real data.
+
+In contrast, the timbre of utterances generated by the **NANSY** method appears abnormal, with its distribution significantly deviating from that of the real data.
+
+Perturbed utterances of different methods can be found in our demo page too.
+
+#### Impact of teacher models
+
+In this section, we study the impact of different teacher models.
+
+Results for models **b1/b2/b3** indicate that they yield similar performance levels.
+
+In traditional semi-supervised learning tasks, pseudo labels are typically treated as training targets, and it is generally observed that higher-quality pseudo labels lead to improved results.
+
+However, in our approach, we utilize pseudo utterances as input to the model.
+
+Consequently, the minor differences among the teacher models have a limited effect on the final performance.
+
+### Ablation study of Speaker Sampling
+
+![](tsne.pdf)
+
+<a id="fig:tsne">Visualizations of speaker embeddings for generated utterances using different perturbation methods.
+
+All the generated utterances are perturbed from the same source utterance. **Real** denotes speaker embedding of real utterances sampled from VCTK test set.</a>
+
+<a id="tab:ablation2">Ablation study of Speaker Sampling. $\boldsymbol{\alpha}$ denotes the probability of speaker sampling.</a>
+
+We explore the impact of *Speaker Sampling* in Table [tab:ablation2](#tab:ablation2).
+
+Results show that our model with speaker sampling **c2** can get a better WER compared to the baseline model **b3**.
+
+It can be attributed to the alleviation of mismatch between training and inference.
+
+However, the results of model **c1** reveal that speaker similarity will degrade if the probability $\alpha$ is big.
+
+We argue that aggressive speaker sampling may increase the difficulty of model training.
+
+In conclusion, the objective results demonstrate that *Pseudo Conversion* enhances speaker similarity while *Speaker Sampling* contributes to improved intelligibility.
