--- a/Models/-VC/2025.06.01_PseudoVC.md
+++ b/Models/-VC/2025.06.01_PseudoVC.md
@@ -433,3 +433,20 @@ However, the results of model **c1** reveal that speaker similarity will degrade
 We argue that aggressive speaker sampling may increase the difficulty of model training.
 
 In conclusion, the objective results demonstrate that *Pseudo Conversion* enhances speaker similarity while *Speaker Sampling* contributes to improved intelligibility.
+
+## 5·Conclusions
+
+In this work, we first analyze the mismatch problem between training and inference in the one-shot voice conversion task.
+
+Then we propose a novel training strategy combining *Pseudo Conversion* and *Speaker Sampling* to mitigate the mismatch problem.
+
+Finally we verify the effectiveness of our proposed method, which outperforms previous methods.
+
+It is important to note that our method employs a two-stage training process, as the teacher voice conversion model must be trained initially.
+
+In future work, we aim to explore the development of a one-stage training framework.
+
+\bibliographystyle{IEEEtran}
+\bibliography{mybib}
+
+\end{document}
