--- a/Models/-VC/2025.02.06_GenVC.md
+++ b/Models/-VC/2025.02.06_GenVC.md
@@ -24,3 +24,13 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+\begin{abstract}
+Most current zero-shot voice conversion methods rely on externally supervised components, particularly speaker encoders, for training.
+To explore alternatives that eliminate this dependency, this paper introduces GenVC, a novel framework that disentangles speaker identity and linguistic content from speech signals in a self-supervised manner.
+GenVC leverages speech tokenizers and an autoregressive, Transformer-based language model as its backbone for speech generation.
+This design supports large-scale training while enhancing both source speaker privacy protection and target speaker cloning fidelity.
+Experimental results demonstrate that GenVC achieves notably higher speaker similarity, with naturalness on par with leading zero-shot approaches.
+Moreover, due to its autoregressive formulation, GenVC introduces flexibility in temporal alignment, reducing the preservation of source prosody and speaker-specific traits, and making it highly effective for voice anonymization.\footnote{Audio samples, code, and model checkpoints are available at \\ \indent\url{https://caizexin.github.io/GenVC/index.html}}
