--- a/Models/-VC/2025.02.06_GenVC.md
+++ b/Models/-VC/2025.02.06_GenVC.md
@@ -617,3 +617,21 @@ Unlike other LM-based approaches, GenVC adopts a simpler architecture and does n
 Our experimental results show that GenVC delivers outstanding voice cloning capability while maintaining naturalness competitive with state-of-the-art zero-shot voice conversion systems.
 
 Moreover, GenVC effectively modifies the prosodic characteristics of the source speech, significantly enhancing privacy preservation in anonymization applications.
+
+## 8·Acknowledgment
+
+This work was supported by the Office of the Director of National Intelligence (ODNI), Intelligence Advanced Research Projects Activity (IARPA), via the ARTS Program under contract D2023-2308110001.
+
+The views and conclusions contained herein are those of the authors and should not be interpreted as necessarily representing the official policies, either expressed or implied, of ODNI, IARPA, or the U.S.
+
+Government.
+
+The U.S.
+
+Government is authorized to reproduce and distribute reprints for governmental purposes notwithstanding any copyright annotation therein.
+
+\bibliographystyle{IEEEtran}
+\bibliography{ref}
+
+\newpage
+\appendix
